--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
